gcc/testsuite/gcc.dg/noncompile/930301-1.c
struct a *q;
f()
{
  q++;	/* { dg-error "pointer to" } */
}
